
stamp-classes: \
Array.st       CompildMeth.st  LookupTable.st  RunArray.st\
ArrayColl.st   CompiledBlk.st  Magnitude.st    Semaphore.st\
Association.st ContextPart.st  MappedColl.st   SeqCollect.st\
Autoload.st    DLD.st          Memory.st       Set.st\
Bag.st         Date.st         Message.st      SharedQueue.st\
Behavior.st    Delay.st        Metaclass.st    SmallInt.st\
BlkClosure.st  Dictionary.st   MethodDict.st   SortCollect.st\
BlkContext.st  DirMessage.st   MethodInfo.st   Stream.st\
Boolean.st     Directory.st    MthContext.st   String.st\
ExcHandling.st Namespace.st    SymLink.st      VFS.st\
Builtins.st    False.st        Number.st       Symbol.st\
ByteArray.st   File.st         ObjDumper.st    SysDict.st\
ScaledDec.st   FileSegment.st  Object.st       Time.st\
ByteStream.st  FileStream.st   OrderColl.st    TokenStream.st\
CFuncs.st      Float.st        PkgLoader.st    Transcript.st\
CObject.st     Fraction.st     Point.st        True.st\
CStruct.st     IdentDict.st    PosStream.st    UndefObject.st\
CType.st       IdentitySet.st  ProcSched.st    ValueAdapt.st\
CharArray.st   Integer.st      Process.st      WeakObjects.st\
Character.st   Interval.st     RWStream.st     OtherArrays.st\
Class.st       LargeInt.st     Random.st       WriteStream.st\
ClassDesc.st   Link.st         ReadStream.st   ObjMemory.st\
Collection.st  LinkedList.st   Rectangle.st    AnsiDates.st\
CompildCode.st LookupKey.st    RootNamespc.st  AnsiExcept.st\
HashedColl.st  FileDescr.st    FloatD.st       FloatE.st\
FloatQ.st      URL.st	       VarBinding.st   RecursionLock.st\
BindingDict.st AbstNamespc.st

	@echo Updating $@
	@echo timestamp >$@

dist_noinst_DATA = stamp-classes
